--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -9,8 +9,8 @@
     <title>Document</title>
 </head>
 <body>
-    <input id = "id" type="text" placeholder="아이디"><br>
-    <input id = "password" type="text" placeholder="비밀번호"><br>
+    <input id = "id" type="text" placeholder="아이디" value="cihg1" ><br>
+    <input id = "password" type="text" placeholder="비밀번호" value="1234"><br>
     <button>로그인</button>  
 </body>
 </html>
