fs모듈을 통한 로그인 기능 구현

--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -19,8 +19,8 @@
             <p class="message">Already registered? <a href="#">Sign In</a></p>
           </form> -->
           <form class="login-form">
-            <input id="id" type="text" placeholder="username"/>
-            <input id="psword" type="password" placeholder="password"/>
+            <input id="id" type="text" value="cihg1" placeholder="username"/>
+            <input id="psword" type="password" value="1234" placeholder="password"/>
             <p id="button">login</p>
             <p class="message">Not registered? <a href="/register">Create an account</a></p>
           </form>
